# ICT_Engine

./: README.md
ICT Indicador/: CLAUDE.md
ICT Indicador/docs/: CHANGELOG.md
ICT Indicador/mcp-ict-agent/src/ict_mcp/: __init__.py  data_provider.py  ict_analysis.py  server.py
ICT Indicador/scripts/: validate-pine.sh
docs/: ARCHITECTURE.md  TRADINGVIEW_SETUP.md
mcp-ict-agent/: pyproject.toml  run_webhook.py
mcp-ict-agent/src/ict_mcp/: webhook.py
src/: ICT_2022_Setup_Engine.pine
